pam-7-istio-plays/RHPAM-and-ServiceMesh/ARCHIVE/OPTION-2-ADVANCED-gateway-destrules-kie-server.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: custom-a-kieserver-ingressgateway
  namespace: istio-system
  labels:
    group: tutorial
spec:
  host: custom-rhpam-service-${NAMESPACE}-istio-system.${APP_SUBDOMAIN}
  port:
    targetPort: http2
  to:
    kind: Service
    name: istio-ingressgateway
    weight: 100
  wildcardPolicy: None
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: custom-rhpam-gw
  namespace: ${NAMESPACE}
  labels:
    group: tutorial
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - custom-rhpam-service-${NAMESPACE}-istio-system.${APP_SUBDOMAIN}
    port:
      name: http2
      number: 80
      protocol: HTTP2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: custom-rhpam-virtual-service
  namespace: ${NAMESPACE}
  labels:
    group: tutorial
spec:
  gateways:
  - custom-rhpam-service-gw
  hosts:
  - custom-rhpam-service-${NAMESPACE}-istio-system.${APP_SUBDOMAIN}
  http:
  - route:
    - destination:
        host: custom-kieserver-kjar-a-v100
        subset: version-kjar-a-v100
      weight: 80
    - destination:
        host: custom-kieserver-kjar-a-v110
        subset: version-kjar-a-v110
      weight: 20
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: custom-kieserver-kjar-a-v100
  namespace: ${NAMESPACE}
  labels:
    group: tutorial
spec:
  host: custom-a-kieserver
  subsets:
  - labels:
      version: kjar-a-v100
    name: version-kjar-a-v100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: custom-kieserver-kjar-a-v110
  namespace: ${NAMESPACE}
  labels:
    group: tutorial
spec:
  host: custom-a1-kieserver
  subsets:
  - labels:
      version: kjar-a-v110
    name: version-kjar-a-v110
---
